--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "webpack serve --config webpack.common.js",
+    "build": "webpack --config webpack.common.js",
     "lint": "eslint . --fix",
     "test": "jest",
     "coverage": "jest --coverage",
